--- a/.classpath
+++ b/.classpath
@@ -6,13 +6,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
-		<attributes>
-			<attribute name="test" value="true"/>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry excluding="src/main/java/|test/|Assignments/|Quizzes/Quiz_codes/|Quizzes/" kind="src" path=""/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="src" path="Assignments"/>
 	<classpathentry kind="src" path="Quizzes/Quiz_codes"/>
