--- a/.classpath
+++ b/.classpath
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" output="target/classes" path="src/main/java">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry excluding="src/main/java/|test/|Assignments/|Quizzes/Quiz_codes/|Quizzes/" kind="src" path=""/>
+	<classpathentry excluding="test/|Assignments/|Quizzes/Quiz_codes/|Quizzes/|src/main/java/|src/main/|src/|target/" kind="src" path=""/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="src" path="Assignments"/>
-	<classpathentry kind="src" path="Quizzes/Quiz_codes"/>
 	<classpathentry excluding="Quiz_codes/" kind="src" path="Quizzes"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
